# libtask

./: CMakeLists.txt  readme.md
tests/: CMakeLists.txt  test_log.h  test_vanilla.cpp
